# hockey_dataset

./: README.md  player_scraper.py  pyproject.toml  requirements.txt  scratch.ipynb  wikipedia_scraper.py
hockey_dataset/: wikipedia.py
tests/: test_wikipedia.py
