[project]
name = "hockey_dataset"
version = "0.0.1"
authors = [
  { name="Dean McCall", email="dean@themccallfamily.net" },
]
description = "Create a dataset of hockey players to use for data analysis."
readme = "README.md"
requires-python = ">=3.11.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dean-mccall/hockey_dataset"
"Bug Tracker" = "https://github.com/dean-mccall/hockey_dataset/issues"