[project]
name = "hockey_dataset"
version = "0.0.1"
authors = [
  { name="Dean McCall", email="dean@themccallfamily.net" },
]
description = "Create a dataset of hockey players to use for data analysis."
readme = "README.md"
requires-python = ">=3.11.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'pandas >= 2.0.0, < 3',
    'requests >= 2.28.2, < 3',
    'beautifulsoup4 >= 4.12.1, < 5',
    'lxml >= 4.9.2, < 5',
    'ipykernel >= 6.22.0, < 7',
    'numpyencoder >= 0.3.0, < 1',
    'sqlalchemy >= 2.0.9, < 3',
    'pylint >= 2.17.2, < 3',
    'pytest >= 7.2.2, < 8',
    'build >= 0.10.0, 1'
]

[project.urls]
"Homepage" = "https://github.com/dean-mccall/hockey_dataset"
"Bug Tracker" = "https://github.com/dean-mccall/hockey_dataset/issues"